test/good/automatic/base/with_input/ret_zero/0001.lat
// return

int main() {
  return readInt();
}
