test/bad/automatic/base/compile_time/0048.lat
int main() {
    "tmp" = 20;
    return 1;
}